fixed style on mobile

--- a/demo/src/style.css
+++ b/demo/src/style.css
@@ -1,12 +1,15 @@
 @import url("https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/variable/pretendardvariable.min.css");
+
 :root {
-  font-family: "Pretendard Variable", Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-size: 14px;
   line-height: 1.5;
   font-weight: 400;
 
+  color-scheme: light dark;
   color: var(--txt);
   background-color: var(--bgc);
-  font-size: 14px;
+
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
@@ -14,19 +17,31 @@
   -webkit-text-size-adjust: 100%;
 }
 
-button {
-  font-family: inherit;
+body {
+  margin: 0;
+  /* display: flex;
+  place-items: center;
+  min-width: 320px;
+  min-height: 100vh; */
 }
+
+button {
+  font: inherit;
+}
+
+code {
+  font-size: 0.8em;
+  font-weight: 600;
+}
+
+p {
+  line-height: 1.6;
+}
+
 
 #app {
-  max-width: 1024px;
-  width: 780px;
+  max-width: 780px;
+  width: 100%;
   margin: 0 auto;
   padding: 2rem;
-
-  font-weight: normal;
-}
-
-@media (prefers-color-scheme: light) {
-
 }
